--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -3,25 +3,39 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:card_view="http://schemas.android.com/apk/res-auto"
     >
 
-    <android.support.v7.widget.CardView
-        xmlns:card_view="http://schemas.android.com/apk/res-auto"
-        android:id="@+id/card_view"
-        android:layout_width="200dp"
-        android:layout_height="200dp"
-        card_view:cardCornerRadius="4dp">
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
-        <TextView
-            android:id="@+id/info_text"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent" />
-    </android.support.v7.widget.CardView>
-    <!-- TODO: Update blank fragment layout -->
+        <ImageView
+            android:id="@+id/free_champ1_icon"
+            android:layout_width="wrap_content"
+            android:layout_height="200dp"
+            android:contentDescription="ICON"
+            android:gravity="center" />
+
+        <ImageView
+            android:id="@+id/free_champ2_icon"
+            android:layout_width="wrap_content"
+            android:layout_height="200dp"
+            android:contentDescription="ICON"
+            android:gravity="center" />
+
+        <ImageView
+            android:id="@+id/free_champ3_icon"
+            android:layout_width="wrap_content"
+            android:layout_height="200dp"
+            android:contentDescription="ICON"
+            android:gravity="center" />
+    </LinearLayout>
 
 
-
-
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:gravity="center"
+        android:text="Yeah,this is my Free Champions of the Week" />
 
 </FrameLayout>
