--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -11,22 +11,22 @@
 
         <ImageView
             android:id="@+id/free_champ1_icon"
-            android:layout_width="wrap_content"
-            android:layout_height="200dp"
+            android:layout_width="136dp"
+            android:layout_height="206dp"
             android:contentDescription="ICON"
             android:gravity="center" />
 
         <ImageView
             android:id="@+id/free_champ2_icon"
-            android:layout_width="wrap_content"
-            android:layout_height="200dp"
+            android:layout_width="137dp"
+            android:layout_height="206dp"
             android:contentDescription="ICON"
             android:gravity="center" />
 
         <ImageView
             android:id="@+id/free_champ3_icon"
-            android:layout_width="wrap_content"
-            android:layout_height="200dp"
+            android:layout_width="136dp"
+            android:layout_height="206dp"
             android:contentDescription="ICON"
             android:gravity="center" />
     </LinearLayout>
