--- a/app/src/main/res/layout/activity_tablayout.xml
+++ b/app/src/main/res/layout/activity_tablayout.xml
@@ -7,8 +7,6 @@
     android:orientation="vertical"
     tools:background="#FFFFFF">
 
-    <include layout="@layout/controls" />
-
     <com.google.android.material.tabs.TabLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -42,7 +40,7 @@
     <FrameLayout
         android:id="@+id/frameLayout"
         android:layout_width="match_parent"
-        android:layout_height="455dp"
+        android:layout_height="match_parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tabLayout">
