--- a/app/src/main/res/layout/fragment_news.xml
+++ b/app/src/main/res/layout/fragment_news.xml
@@ -19,7 +19,7 @@
          xmlns:card_view="http://schemas.android.com/apk/res-auto"
          android:id="@+id/card_view"
          android:layout_width="match_parent"
-         android:layout_height="200dp"
+         android:layout_height="280dp"
          android:layout_marginBottom="10dp"
          card_view:cardCornerRadius="4dp">
 
@@ -30,9 +30,11 @@
              <ImageView
                  android:id="@+id/news1_icon"
                  android:layout_width="match_parent"
-                 android:layout_height="150dp"
+                 android:layout_height="230dp"
+                 android:adjustViewBounds="true"
                  android:contentDescription="ICON"
-                 android:gravity="center" />
+                 android:gravity="center"
+                 android:scaleType="fitXY" />
 
              <TextView
                  android:id="@+id/news1_info"
@@ -50,7 +52,7 @@
         android:id="@+id/card_view2"
         android:layout_width="match_parent"
         android:layout_below="@+id/card_view"
-        android:layout_height="200dp"
+        android:layout_height="280dp"
         android:layout_marginBottom="10dp"
         card_view:cardCornerRadius="4dp">
 
@@ -61,8 +63,10 @@
             <ImageView
                 android:id="@+id/news2_icon"
                 android:layout_width="match_parent"
-                android:layout_height="150dp"
+                android:layout_height="230dp"
                 android:contentDescription="ICON"
+                android:scaleType="fitXY"
+                android:adjustViewBounds="true"
                 android:gravity="center" />
 
             <TextView
@@ -80,7 +84,7 @@
             android:id="@+id/card_view3"
             android:layout_width="match_parent"
             android:layout_below="@+id/card_view2"
-            android:layout_height="200dp"
+            android:layout_height="280dp"
             android:layout_marginBottom="10dp"
             card_view:cardCornerRadius="4dp">
 
@@ -91,8 +95,10 @@
                 <ImageView
                     android:id="@+id/news3_icon"
                     android:layout_width="match_parent"
-                    android:layout_height="150dp"
+                    android:layout_height="230dp"
                     android:contentDescription="ICON"
+                    android:scaleType="fitXY"
+                    android:adjustViewBounds="true"
                     android:gravity="center" />
 
                 <TextView
