--- a/app/src/main/res/layout/saved_item.xml
+++ b/app/src/main/res/layout/saved_item.xml
@@ -8,13 +8,21 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center_vertical"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:background="#9AAA41"
+        android:layout_marginBottom="20dp"
+        >
+
 
         <TextView
             android:id="@+id/sl_item"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:gravity="center_vertical"
+            android:layout_marginLeft="20dp"
+            android:background="#ffff"
+            android:alpha="0.3"
+            android:textColor="#000000"
             android:textSize="24sp" />
 
     </LinearLayout>
