--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,15 +5,11 @@
     android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-
-
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical"
+        android:layout_height="wrap_content"
         android:id="@+id/drawer_inner_layout"
         tools:context=".MainActivity">
-
         <androidx.appcompat.widget.Toolbar
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
@@ -22,69 +18,23 @@
             android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
             app:layout_constraintTop_toTopOf="parent"
             app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
-
-
-        <TextView
-            android:id="@+id/textView"
-            android:layout_width="233dp"
-            android:layout_height="76dp"
-            android:layout_marginTop="56dp"
-            android:gravity="center_horizontal"
-            android:text="@string/title"
-            android:textAlignment="center"
-            android:textSize="25sp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/toolbar" />
-
-        <Button
-            android:id="@+id/search_button"
-            style="@style/Widget.AppCompat.Button"
-            android:layout_width="120dp"
-            android:layout_height="130dp"
-            android:layout_marginTop="150dp"
-            android:text="@string/search_button"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.498"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView"
-            app:layout_constraintVertical_bias="0.23" />
-
-
-        <EditText
+        <androidx.appcompat.widget.SearchView
             android:id="@+id/et_summoner"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="92dp"
-            android:autofillHints=""
-            android:hint="@string/enter_name"
-            android:inputType="text"
-            app:layout_constraintBottom_toTopOf="@+id/search_button"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView"
-            app:layout_constraintVertical_bias="0.162" />
-
-        <TextView
-            android:id="@+id/errorText"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:visibility="gone"
-            android:textColor="#F00"
-            app:layout_constraintBottom_toTopOf="@+id/search_button"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/et_summoner"
-            app:layout_constraintVertical_bias="0.162" />
+            android:layout_width="240dp"
+            android:layout_height="?attr/actionBarSize"
+            android:background="@drawable/search_selector"
+            android:queryHint="@string/enter_name" />
+    </RelativeLayout>
+    <FrameLayout
+        android:id="@+id/ly_content"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@+id/drawer_inner_layout"
+        android:layout_above="@id/bottom_navigation"
+        >
 
 
-
-
-
-    </androidx.constraintlayout.widget.ConstraintLayout>
-
-
+    </FrameLayout>
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bottom_navigation"
         android:layout_width="match_parent"
@@ -93,5 +43,4 @@
         app:menu="@menu/nav_drawer"
         app:labelVisibilityMode="labeled"
         android:background="?android:attr/windowBackground"/>
-
 </RelativeLayout>
