--- a/app/src/main/res/layout/fragment_tftmatch.xml
+++ b/app/src/main/res/layout/fragment_tftmatch.xml
@@ -13,7 +13,7 @@
             style="@style/Widget.AppCompat.Button"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/view_last_20_tft_match_histories" />
+            android:text="VIEW LAST 20 TFT MATCH HISTORIES" />
 
         <RelativeLayout
             android:id="@+id/tft_relative_layout"
@@ -38,8 +38,8 @@
             android:layout_marginLeft="20dp"
             android:layout_marginTop="30dp"
             android:id="@+id/tftlevel"
-            android:text="@string/tft_status_coming_soon"
-            android:layout_marginStart="20dp" />
+            android:text="TFT Status Coming Soon"
+            />
 
 
         <TextView
@@ -51,8 +51,8 @@
             android:layout_marginLeft="20dp"
             android:layout_marginTop="20dp"
             android:id="@+id/tftrevisiondate"
-            android:text="@string/last_revision_date"
-            android:layout_marginStart="20dp" />
+            android:text="Last Revision Date:"
+            />
 
         <TextView
             android:layout_width="wrap_content"
@@ -63,7 +63,7 @@
             android:layout_marginLeft="20dp"
             android:layout_marginTop="20dp"
             android:id="@+id/tftmydate"
-            android:layout_marginStart="20dp" />
+            />
 
             <ImageView
                 android:layout_width="match_parent"
