--- a/app/src/main/res/layout/fragment_free_champs.xml
+++ b/app/src/main/res/layout/fragment_free_champs.xml
@@ -1,188 +1,188 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    >
-
-    <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-
+    android:layout_height="match_parent">
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content">
 
         <ImageView
             android:id="@+id/free_champ1_icon"
             android:layout_width="160dp"
-            android:layout_height="210dp"
+            android:layout_height="160dp"
             android:layout_marginHorizontal="25dp"
             android:contentDescription="ICON"
-            android:scaleType="fitXY"
-            android:gravity="center" />
+            android:gravity="center"
+            android:scaleType="fitStart" />
 
         <ImageView
             android:id="@+id/free_champ2_icon"
             android:layout_width="160dp"
-            android:layout_height="210dp"
-            android:layout_toRightOf="@+id/free_champ1_icon"
+            android:layout_height="160dp"
             android:layout_marginHorizontal="15dp"
+            android:layout_toEndOf="@+id/free_champ1_icon"
+            android:layout_toRightOf="@+id/free_champ1_icon"
             android:contentDescription="ICON"
-            android:scaleType="fitXY"
-            android:gravity="center" />
+            android:gravity="center"
+            android:scaleType="fitStart" />
 
         <ImageView
             android:id="@+id/free_champ3_icon"
             android:layout_width="160dp"
-            android:layout_height="210dp"
+            android:layout_height="160dp"
             android:layout_below="@+id/free_champ1_icon"
-            android:layout_marginTop="20dp"
             android:layout_marginHorizontal="25dp"
+            android:layout_marginTop="20dp"
             android:contentDescription="ICON"
-            android:scaleType="fitXY"
-            android:gravity="center" />
+            android:gravity="center"
+            android:scaleType="fitXY" />
 
         <ImageView
             android:id="@+id/free_champ4_icon"
             android:layout_width="160dp"
-            android:layout_height="210dp"
-            android:layout_toRightOf="@+id/free_champ1_icon"
+            android:layout_height="160dp"
             android:layout_below="@+id/free_champ2_icon"
-            android:layout_marginTop="20dp"
             android:layout_marginHorizontal="15dp"
+            android:layout_marginTop="20dp"
+            android:layout_toEndOf="@+id/free_champ1_icon"
+            android:layout_toRightOf="@+id/free_champ1_icon"
             android:contentDescription="ICON"
-            android:scaleType="fitXY"
-            android:gravity="center" />
+            android:gravity="center"
+            android:scaleType="fitXY" />
 
         <ImageView
             android:id="@+id/free_champ5_icon"
             android:layout_width="160dp"
-            android:layout_height="210dp"
+            android:layout_height="160dp"
             android:layout_below="@+id/free_champ3_icon"
-            android:layout_marginTop="20dp"
             android:layout_marginHorizontal="25dp"
+            android:layout_marginTop="20dp"
             android:contentDescription="ICON"
-            android:scaleType="fitXY"
-            android:gravity="center" />
+            android:gravity="center"
+            android:scaleType="fitXY" />
 
         <ImageView
             android:id="@+id/free_champ6_icon"
             android:layout_width="160dp"
-            android:layout_height="210dp"
-            android:layout_toRightOf="@+id/free_champ1_icon"
+            android:layout_height="160dp"
             android:layout_below="@+id/free_champ4_icon"
-            android:layout_marginTop="20dp"
             android:layout_marginHorizontal="15dp"
+            android:layout_marginTop="20dp"
+            android:layout_toEndOf="@+id/free_champ1_icon"
+            android:layout_toRightOf="@+id/free_champ1_icon"
             android:contentDescription="ICON"
-            android:scaleType="fitXY"
-            android:gravity="center" />
+            android:gravity="center"
+            android:scaleType="fitXY" />
 
         <ImageView
             android:id="@+id/free_champ7_icon"
             android:layout_width="160dp"
-            android:layout_height="210dp"
+            android:layout_height="160dp"
             android:layout_below="@+id/free_champ5_icon"
-            android:layout_marginTop="20dp"
             android:layout_marginHorizontal="25dp"
+            android:layout_marginTop="20dp"
             android:contentDescription="ICON"
-            android:scaleType="fitXY"
-            android:gravity="center" />
+            android:gravity="center"
+            android:scaleType="fitXY" />
 
         <ImageView
             android:id="@+id/free_champ8_icon"
             android:layout_width="160dp"
-            android:layout_height="210dp"
-            android:layout_toRightOf="@+id/free_champ1_icon"
+            android:layout_height="160dp"
             android:layout_below="@+id/free_champ6_icon"
-            android:layout_marginTop="20dp"
             android:layout_marginHorizontal="15dp"
+            android:layout_marginTop="20dp"
+            android:layout_toEndOf="@+id/free_champ1_icon"
+            android:layout_toRightOf="@+id/free_champ1_icon"
             android:contentDescription="ICON"
-            android:scaleType="fitXY"
-            android:gravity="center" />
+            android:gravity="center"
+            android:scaleType="fitXY" />
 
         <ImageView
             android:id="@+id/free_champ9_icon"
             android:layout_width="160dp"
-            android:layout_height="210dp"
+            android:layout_height="160dp"
             android:layout_below="@+id/free_champ7_icon"
-            android:layout_marginTop="20dp"
             android:layout_marginHorizontal="25dp"
+            android:layout_marginTop="20dp"
             android:contentDescription="ICON"
-            android:scaleType="fitXY"
-            android:gravity="center" />
+            android:gravity="center"
+            android:scaleType="fitXY" />
 
         <ImageView
             android:id="@+id/free_champ10_icon"
             android:layout_width="160dp"
-            android:layout_height="210dp"
-            android:layout_toRightOf="@+id/free_champ1_icon"
+            android:layout_height="160dp"
             android:layout_below="@+id/free_champ8_icon"
-            android:layout_marginTop="20dp"
             android:layout_marginHorizontal="15dp"
+            android:layout_marginTop="20dp"
+            android:layout_toEndOf="@+id/free_champ1_icon"
+            android:layout_toRightOf="@+id/free_champ1_icon"
             android:contentDescription="ICON"
-            android:scaleType="fitXY"
-            android:gravity="center" />
+            android:gravity="center"
+            android:scaleType="fitXY" />
 
         <ImageView
             android:id="@+id/free_champ11_icon"
             android:layout_width="160dp"
-            android:layout_height="210dp"
+            android:layout_height="160dp"
             android:layout_below="@+id/free_champ9_icon"
-            android:layout_marginTop="20dp"
             android:layout_marginHorizontal="25dp"
+            android:layout_marginTop="20dp"
             android:contentDescription="ICON"
-            android:scaleType="fitXY"
-            android:gravity="center" />
+            android:gravity="center"
+            android:scaleType="fitXY" />
 
         <ImageView
             android:id="@+id/free_champ12_icon"
             android:layout_width="160dp"
-            android:layout_height="210dp"
-            android:layout_toRightOf="@+id/free_champ1_icon"
+            android:layout_height="160dp"
             android:layout_below="@+id/free_champ10_icon"
-            android:layout_marginTop="20dp"
             android:layout_marginHorizontal="15dp"
+            android:layout_marginTop="20dp"
+            android:layout_toEndOf="@+id/free_champ1_icon"
+            android:layout_toRightOf="@+id/free_champ1_icon"
             android:contentDescription="ICON"
-            android:scaleType="fitXY"
-            android:gravity="center" />
+            android:gravity="center"
+            android:scaleType="fitXY" />
 
         <ImageView
             android:id="@+id/free_champ13_icon"
             android:layout_width="160dp"
-            android:layout_height="210dp"
-            android:layout_below="@+id/free_champ11_icon"
-            android:layout_marginTop="20dp"
+            android:layout_height="160dp"
             android:layout_marginHorizontal="25dp"
+            android:layout_marginTop="20dp"
+            android:layout_below="@id/free_champ11_icon"
             android:contentDescription="ICON"
-            android:scaleType="fitXY"
-            android:gravity="center" />
+            android:gravity="center"
+            android:scaleType="fitXY" />
 
         <ImageView
             android:id="@+id/free_champ14_icon"
             android:layout_width="160dp"
-            android:layout_height="210dp"
-            android:layout_toRightOf="@+id/free_champ1_icon"
-            android:layout_below="@+id/free_champ12_icon"
-            android:layout_marginTop="20dp"
+            android:layout_height="160dp"
             android:layout_marginHorizontal="15dp"
+            android:layout_marginTop="20dp"
+            android:layout_toRightOf="@+id/free_champ1_icon"
             android:contentDescription="ICON"
+            android:layout_below="@id/free_champ12_icon"
+            android:gravity="center"
             android:scaleType="fitXY"
-            android:gravity="center" />
+            android:layout_toEndOf="@+id/free_champ1_icon" />
 
         <ImageView
             android:id="@+id/free_champ15_icon"
             android:layout_width="160dp"
-            android:layout_height="210dp"
+            android:layout_height="160dp"
             android:layout_below="@+id/free_champ13_icon"
-            android:layout_marginTop="20dp"
             android:layout_marginHorizontal="25dp"
+            android:layout_marginTop="20dp"
             android:contentDescription="ICON"
-            android:scaleType="fitXY"
-            android:gravity="center" />
-    </RelativeLayout>
-    </ScrollView>
+            android:gravity="center"
+            android:scaleType="fitXY" />
 
-</FrameLayout>
+    </RelativeLayout>
+
+</ScrollView>
+
