--- a/app/src/main/res/menu/nav_drawer.xml
+++ b/app/src/main/res/menu/nav_drawer.xml
@@ -13,7 +13,7 @@
 
     <item
         android:id="@+id/nav_settings"
-        android:icon="@drawable/ic_change_region"
-        android:title="@string/nav_change_region" />
+        android:icon="@drawable/ic_action_settings"
+        android:title="@string/nav_setting" />
 
 </menu>
